# asset-manager

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: find_nested_zips.rs
scripts/: run.cmd  run.ps1
src/: archive.rs  data.rs  detail_panel.rs  export.rs  grid.rs  image_loader.rs  main.rs  resources.rs  shortcuts.rs  status_bar.rs  tree_panel.rs  ui_persist.rs  viewport.rs
